# atomic_habits_drf

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_reward.py  0002_rename_las_try_habit_date.py  0003_alter_habit_date.py  0003_alter_habit_options.py  0004_alter_habit_periodicity.py  0004_alter_habit_time.py  0005_alter_habit_periodicity.py  0005_alter_habit_reward.py  0006_alter_habit_periodicity.py  0007_alter_habit_periodicity.py  0008_habit_las_try.py
tests/: test_habit_others.py  tests_habit_others.py  tests_habit_validators.py  tests_habits.py  tests_users.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py  fill_usr.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py
